--- a/index.html
+++ b/index.html
@@ -1,75 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sloppa Choppa</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Humble 68</title>
   <style>
     body {
       margin: 0;
-      height: 100vh;
-      background: url('1920x1080.jpg') center/cover no-repeat;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Arial Black', sans-serif;
-      color: #f8e08c;
-      text-align: center;
       overflow: hidden;
-    }
-
-    body::after {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 0;
-    }
-
-    .content {
-      position: relative;
-      z-index: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .ca-box {
-      font-family: monospace;
-      background: rgba(255,255,255,0.1);
-      border: 1px solid rgba(255,255,255,0.3);
-      border-radius: 10px;
-      padding: 12px 28px;
-      color: #f8e08c;
-      font-size: 0.95rem;
-      box-shadow: 0 0 15px rgba(255,215,0,0.3);
-    }
-
-    .btn {
-      display: inline-block;
-      background: linear-gradient(90deg, #ffd700, #ff8800);
+      background-color: #ffffff;
       color: #000;
-      font-weight: bold;
-      text-decoration: none;
-      padding: 12px 30px;
-      border-radius: 30px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-      transition: all 0.3s ease;
-      text-transform: uppercase;
+      font-family: 'Courier New', monospace;
+      height: 100vh;
+      width: 100vw;
     }
 
-    .btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(255,215,0,0.5);
+    h1 {
+      position: fixed;
+      top: 20px;
+      width: 100%;
+      text-align: center;
+      font-size: 1.2rem;
+      letter-spacing: 1px;
+    }
+
+    .sixty-eight {
+      position: absolute;
+      font-size: 3rem;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.7);
+      user-select: none;
+      transition: transform 2s ease, opacity 1s ease;
     }
   </style>
 </head>
 <body>
-  <div class="content">
-    <div class="ca-box">CA: will be added soon</div>
-    <a href="https://x.com/i/communities/1987998813408149835" target="_blank" class="btn">Join X Community</a>
-  </div>
+  <h1>The great meme reset: Happens — The Humble 68:</h1>
+
+  <script>
+    const COUNT = 25; // количество чисел 68
+    const body = document.body;
+    const elements = [];
+
+    // создаем элементы
+    for (let i = 0; i < COUNT; i++) {
+      const el = document.createElement('div');
+      el.classList.add('sixty-eight');
+      el.textContent = '68';
+      el.style.left = Math.random() * 100 + 'vw';
+      el.style.top = Math.random() * 100 + 'vh';
+      el.style.fontSize = (Math.random() * 4 + 2) + 'rem';
+      el.style.opacity = Math.random() * 0.8 + 0.2;
+      body.appendChild(el);
+      elements.push(el);
+    }
+
+    // движение
+    function animate() {
+      elements.forEach(el => {
+        const x = Math.random() * 100;
+        const y = Math.random() * 100;
+        const scale = 0.8 + Math.random() * 1.4;
+        const rot = Math.random() * 360;
+        const opacity = 0.3 + Math.random() * 0.7;
+
+        el.style.transform = `translate(${x}vw, ${y}vh) scale(${scale}) rotate(${rot}deg)`;
+        el.style.opacity = opacity;
+      });
+
+      requestAnimationFrame(() => {
+        setTimeout(animate, 2500 + Math.random() * 2000);
+      });
+    }
+
+    animate();
+
+    // добавляем появление/исчезновение новых 68
+    setInterval(() => {
+      const el = document.createElement('div');
+      el.classList.add('sixty-eight');
+      el.textContent = '68';
+      el.style.left = Math.random() * 100 + 'vw';
+      el.style.top = Math.random() * 100 + 'vh';
+      el.style.fontSize = (Math.random() * 4 + 2) + 'rem';
+      el.style.opacity = 0;
+      body.appendChild(el);
+      setTimeout(() => el.style.opacity = 1, 50);
+      setTimeout(() => el.remove(), 5000);
+    }, 1000);
+  </script>
 </body>
 </html>
