--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
     h1 {
       position: fixed;
-      top: 80px;
+      top: 40px;
       width: 100%;
       text-align: center;
       font-size: 1.1rem;
       letter-spacing: 0.5px;
       z-index: 3;
+      font-weight: bold;
     }
 
     .sixty-eight {
@@ -38,13 +39,13 @@
 
     .top-panel {
       position: fixed;
-      top: 20px;
+      top: 80px;
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 10px;
+      gap: 12px;
       z-index: 5;
     }
 
@@ -81,7 +82,7 @@
 
     .bottom-text {
       position: fixed;
-      bottom: 40px;
+      bottom: 120px;
       width: 100%;
       display: flex;
       justify-content: center;
@@ -91,13 +92,14 @@
 
     .block {
       width: 25%;
-      background: rgba(0,0,0,0.05);
+      background: rgba(0,0,0,0.08);
       padding: 15px 20px;
       border-radius: 10px;
-      font-size: 0.9rem;
-      line-height: 1.4;
+      font-size: 0.95rem;
+      line-height: 1.5;
       text-align: center;
-      color: #111;
+      color: #000;
+      font-weight: bold;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
@@ -105,6 +107,7 @@
       .bottom-text {
         flex-direction: column;
         align-items: center;
+        bottom: 50px;
       }
       .block {
         width: 80%;
@@ -113,12 +116,12 @@
   </style>
 </head>
 <body>
+  <h1>The great meme reset: Happens — The Humble 68</h1>
+
   <div class="top-panel">
     <div class="ca-box">CA: TBA</div>
     <a href="https://x.com/i/communities/1988030401877541331" target="_blank" class="btn">Join X Community</a>
   </div>
-
-  <h1>The great meme reset: Happens — The Humble 68</h1>
 
   <div class="bottom-text">
     <div class="block">
@@ -140,7 +143,6 @@
     const body = document.body;
     const elements = [];
 
-    // создать много "68"
     for (let i = 0; i < COUNT; i++) {
       const el = document.createElement('div');
       el.classList.add('sixty-eight');
@@ -153,7 +155,6 @@
       elements.push(el);
     }
 
-    // хаотичное движение
     function animate() {
       elements.forEach(el => {
         const x = Math.random() * 100;
@@ -161,7 +162,6 @@
         const scale = 0.5 + Math.random() * 2.5;
         const rot = Math.random() * 720 - 360;
         const opacity = 0.3 + Math.random() * 0.7;
-
         el.style.transform = `translate(${x}vw, ${y}vh) scale(${scale}) rotate(${rot}deg)`;
         el.style.opacity = opacity;
       });
@@ -170,7 +170,6 @@
 
     animate();
 
-    // создаем новые "68", которые появляются и исчезают
     setInterval(() => {
       const el = document.createElement('div');
       el.classList.add('sixty-eight');
