--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <h1>The great meme reset: Happens — The Humble 68</h1>
 
   <div class="top-panel">
-    <div class="ca-box">CA: TBA</div>
+    <div class="ca-box">CA: 444QHT9n3wWmtL53uW8ch6rG2uAgw6i4UZzn1vWLpump</div>
     <a href="https://x.com/i/communities/1988030401877541331" target="_blank" class="btn">Join X Community</a>
   </div>
 
